--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,3 @@
-
 image: Ubuntu
 
 branches:
@@ -8,11 +7,9 @@ branches:
 build: off
 
 install:
-  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar artifacts/app-ibank.jar -P:profile=test" -PassThru
+  - java -jar ./artifacts/app-ibank.jar -P:profile=test &
 
 build_script:
-  - ps: chmod +x gradlew
-  - ps: ./gradlew test --info "-Dselenide.headless=true"
+  - chmod +x gradlew
+  - ./gradlew test --info "-Dselenide.headless=true"
 
-on_finish:
-  - ps: Stop-Process -Id $App.Id
