--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 15
+sourceCompatibility = 13
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     testImplementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'io.rest-assured:json-schema-validator:4.3.0'
+    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 }
 
 test {
