--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,5 +11,5 @@ install:
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test --info "-Dselenide.headless=true"
+  - ./gradlew test -Dselenide.headless=true --info
 
